--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "cross-env": "^5.1.1",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
+    "leaflet": "^1.3.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-leaflet": "^2.0.0-rc.3",
+    "react-leaflet": "^2.1.2",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.3.1",
     "reactstrap": "^5.0.0",
